--- a/css/global.css
+++ b/css/global.css
@@ -30,5 +30,6 @@ body{
 .header__menu-item a:hover{
     text-decoration: underline;
     color: #aa00ff;
+    filter: drop-shadow(0 0 0.50rem #aa00ff);
     transition: 0.5s ease-out; 
 }
